--- a/이요셉/index.html
+++ b/이요셉/index.html
@@ -19,15 +19,82 @@
                     <div class="split">PORTFOLIO</div>
                 </div>
                 <div class="desc">
-                    <div class="split">항공기계설계를 전공으로 공부하였고, 다양한 분야의 업무를 하며 나의 적성에 맞는 일을 찾고자 노력을 했습니다.</div>
-                    <div class="split">다니던 대학원을 휴학하고 국비지원학원에서 약 6개월간의 여정을 시작했습니다.</div>
-                    <div class="split">아직은 서툴고 부족하다는 점을 알고 있습니다.</div>
+                    <div class="split">어떤 일이라도 노력하고 즐기면  그 결과는 빛을 바란다고 생각합니다. </div>
+                    <div class="split">신입의 열정과 도전정신을 깊숙히 새기며 배움에 있어 겸손함을 유지하며</div>
+                    <div class="split">세부적인 곳까지 파고드는 개발자가 되겠습니다.</div>
                 </div>
             </div>
             <iframe class="bg" src="https://webstoryboy.github.io/web2022/webstoryboy_three/three.js/index48.html" frameborder="0"></iframe>
         </section>
-        <section id="section2"></section>
-        <section id="section3"></section>
+        <!-- //section1 -->
+
+        <section id="section2">
+            <div class="sec2-img">
+                <span></span>
+            </div>
+            <div class="sec2-text">
+                언제나 성장하기 위해 노력하고 끊임없이 움직이는 사람, 신입 개발자 이요셉입니다!
+                
+                저는 중국의 산동대학교에서 경영학을 전공하며 다양한 경험을 쌓았습니다. 
+                이제는 나의 적성에 맞는 일을 찾고자 노력하고 있습니다. 
+                초기에는 개발에 대해 익숙하지 않아 서툴고 부족하다는 것을 알고 있습니다. 
+                하지만 이러한 부분을 열정적으로 극복하고자 합니다!
+
+                저는 항상 새로운 도전을 통해 스스로를 발전시키고자 하는 열정을 가지고 있습니다. 
+                어려운 문제에 직면하더라도 결코 굴하지 않고, 적극적인 태도로 학습하고 성장하는 것을 목표로 삼고 있습니다. 
+                제한된 경험과 지식을 극복하며, 능동적으로 새로운 기술과 개념을 습득하고 적용해 나갈 준비가 되어 있습니다.
+
+                실력과 노력은 점점 상승한다고 믿습니다. 저는 끊임없이 발전하고자 하는 열정과 인내심을 가지고 있으며, 
+                어떤 일이든 최선을 다해 성취하기 위해 노력할 것입니다. 제가 부족한 부분을 채우기 위해 노력하고, 
+                함께 일하는 동료들과의 협업을 통해 더 큰 성과를 이뤄낼 자신이 있습니다.
+
+                저는 열정적이고 성장을 추구하는 신입 개발자로서, 
+                새로운 도전을 감히 받아들이며 빠르게 적응하고 성장할 준비가 되어 있습니다. 
+                저에게 주어진 기회를 최대한 활용하여 조직에 가치를 더하고, 
+                함께 성장하는 모습을 보여드리겠습니다!
+            </div>
+        </section>
+        <!-- //section2 -->
+
+        <section id="section3">
+            <div class="sec-title">
+                <div><em>CODING SITE</em> SITE CODING SITE CODING SITE CODING</div>
+                <div>SITE CODING SITE <em>CODING SITE</em> CODING SITE CODING</div>
+                <div><em>CODING SITE</em> SITE CODING SITE CODING SITE CODING </div>
+            </div>
+
+            <div class="sec-pin">
+                <div class="sec3-section1">
+                    <div class="box box1">
+                        <span>#01</span>
+                        <h3>웹표준을 준수한 사이트 제작</h3>
+                        <p>
+                            웹 표준 코딩 사이트는 웹 개발자들이 웹 사이트를 개발할 때 일반적으로 따르는 표준화된 규칙과 권장사항을 제공하는 사이트입니다. 이러한 사이트는 웹 개발자들이 웹 페이지를 구축할 때 일관성 있고 효율적인 코드를 작성할 수 있도록 도움을 줍니다.
+                        </p>
+                        <div class="btn">
+                            <a href="#">code view</a>
+                            <a href="#">source view</a>
+                        </div>
+                        <div class="qr">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/QR_Code_Example.svg/1200px-QR_Code_Example.svg.png" alt="">
+                            <div class="info">
+
+                            </div>
+                        </div>
+                        <div class="mockup mockup1">
+                            <img src="assets/img/s1.png" alt="dd">
+                        </div>
+                    </div>
+                </div>
+                <div class="sec3-section2">sec3-section2</div>
+                <div class="sec3-section3">sec3-section3</div>
+                <div class="sec3-section4">sec3-section4</div>
+                <div class="sec3-section5">sec3-section5</div>
+                <div class="sec3-section6">sec3-section6</div>
+            </div>
+        </section>
+        <!-- //section3 -->
+
         <section id="section4"></section>
         <section id="section5"></section>
         <section id="section6"></section>
@@ -36,8 +103,18 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
     <script>
+        const lenis = new Lenis()
+
+        function raf(time) {
+            lenis.raf(time)
+            requestAnimationFrame(raf)
+        }
+        requestAnimationFrame(raf)
+
+
         document.querySelectorAll(".split").forEach(text => {
             let theText = text.innerText;
             let newText = "";
@@ -85,6 +162,42 @@
                 delay: 3,
             })
         }, 2000);
+
+        // 
+
+        gsap.set(".sec3-section1 .box", {autoAlpha: 0, width: "10vw", height: "10vw"})
+        gsap.set(".sec3-section1 .box span", {autoAlpha: 0})
+        gsap.set(".sec3-section1 .box h3", {autoAlpha: 0, y: 10})
+        gsap.set(".sec3-section1 .box p", {autoAlpha: 0, y: 10})
+        gsap.set(".sec3-section1 .box .btn", {autoAlpha: 0, y: 10})
+        gsap.set(".sec3-section1 .box .qr", {autoAlpha: 0, y: 10})
+        gsap.set(".sec3-section1 .box .mockup", {autoAlpha: 0, x: 100})
+
+        const ani1 = gsap.timeline();
+        ani1.to(".sec3-section1 .box",      {duration:0.5, width: "10vw", height: "10vw", autoAlpha:1})
+        ani1.to(".sec3-section1 .box span", {duration:0.5, autoAlpha:1})
+        ani1.to(".sec3-section1 .box",      {duration:0.3, x: 300})
+        ani1.to(".sec3-section1 .box",      {duration:0.3, y: 300})
+        ani1.to(".sec3-section1 .box",      {duration:0.3, x: 0})
+        ani1.to(".sec3-section1 .box",      {duration:0.3, y: 0})
+        ani1.to(".sec3-section1 .box",      {duration:0.5, width: "25vw", height: "10vw"})
+        ani1.to(".sec3-section1 .box",      {duration:0.5, width: "25vw", height: "auto"})
+        ani1.to(".sec3-section1 .box h3",   {duration:0.5, autoAlpha:1, y: 0})
+        ani1.to(".sec3-section1 .box p",    {duration:0.5, autoAlpha:1, y: 0})
+        ani1.to(".sec3-section1 .box .btn", {duration:0.5, autoAlpha:1, y: 0})
+        ani1.to(".sec3-section1 .box .qr",  {duration:0.5, autoAlpha:1, y: 0})
+        ani1.to(".sec3-section1 .box .mockup",  {duration:1.5, autoAlpha:1, x: 0})
+
+        ScrollTrigger.create({
+            animation: ani1,
+            trigger: ".sec3-section1",
+            start: "top top",
+            end: "+=5000",
+            scrub: true,
+            pin: true, 
+            anticipatePin: 1,
+            markers: true
+        });
     </script>
 
 
