--- a/이은지/index.html
+++ b/이은지/index.html
@@ -29,14 +29,22 @@
 
     <main id="main">
         <section id="section1">
+            <div class="story">
+                <div class="text t1">코딩이란?</div>
+                <div class="text t2">프로그래밍 코드를</div>
+                <div class="text t3">어딘가에</div>
+                <div class="text t4">적는 것을 말한다</div>
+                <div class="text t5">그래서 나도</div>
+                <div class="text t6">적기 시작했다.</div>
+            </div>
             <div class="title">
-                <div>
+                <div class="p1">
                     <h2>Tenacious and Live</h2>
                 </div>
-                <div>
+                <div class="p2">
                     <h2>Deliberate and Conscius</h2>
                 </div>
-                <div>
+                <div class="p3">
                     <h2>Love and Passionate</h2>
                 </div>
             </div>
@@ -44,7 +52,15 @@
         </section>
         <!-- //section1 -->
 
-        <section id="section2"></section>
+        <section id="section2">
+            <h2>About <em>Me</em></h2>
+            <div class="img"> </div>
+            <p class="desc"><em>Deliberate</em> and Conscius<br>Love and <em>Passionate</em></p>
+            <p class="left">어떤 일이라도 노력하고 즐기면  그 결과는 빛을 바란다고 생각합니다. 신입의 열정과 도전정신을 깊숙히 새기며 배움에 있어 겸손함을 유지하며 세부적인 곳까지 파고드는 개발자가 되겠습니다.</p>
+            <p class="right">어떤 일이라도 노력하고 즐기면  그 결과는 빛을 바란다고 생각합니다. 신입의 열정과 도전정신을 깊숙히 새기며 배움에 있어 겸손함을 유지하며 세부적인 곳까지 파고드는 개발자가 되겠습니다.</p>
+        </section>
+        <!-- //section2 -->
+
         <section id="section3"></section>
         <section id="section4"></section>
         <section id="section5"></section>
@@ -52,7 +68,55 @@
     </main>
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
+    <script>
+        gsap.set("#header", {top: -100})
+        gsap.set("#canvas", {autoAlpha: 0})
+        gsap.set("#section1", {autoAlpha: 0})
+        gsap.set(".title .p1", {autoAlpha: 0, y: 50})
+        gsap.set(".title .p2", {autoAlpha: 0, y: 50})
+        gsap.set(".title .p3", {autoAlpha: 0, y: 50})
+        gsap.set(".story .t1", {autoAlpha: 0, y:50})
+        gsap.set(".story .t2", {autoAlpha: 0, y:50})
+        gsap.set(".story .t3", {autoAlpha: 0, y:50})
+        gsap.set(".story .t4", {autoAlpha: 0, y:50})
+        gsap.set(".story .t5", {autoAlpha: 0, y:50})
+        gsap.set(".story .t6", {autoAlpha: 0, y:50})
 
+        setTimeout(() => {
+            let tl = gsap.timeline();
+            tl.to("#section1", {autoAlpha: 1, duration: 2})
+            tl.to(".story .t1", {autoAlpha: 1, duration: 1, y:0, ease: "sine.out"})
+            tl.to(".story .t1", {autoAlpha: 0, duration: 1, y:-50, ease: "sine.out", delay: 2})
+            tl.to(".story .t2", {autoAlpha: 1, duration: 1, y:0, ease: "sine.out"})
+            tl.to(".story .t2", {autoAlpha: 0, duration: 1, y:-50, ease: "sine.out", delay: 2})
+            tl.to(".story .t3", {autoAlpha: 1, duration: 1, y:0, ease: "sine.out"})
+            tl.to(".story .t3", {autoAlpha: 0, duration: 1, y:-50, ease: "sine.out", delay: 2})
+            tl.to(".story .t4", {autoAlpha: 1, duration: 1, y:0, ease: "sine.out"})
+            tl.to(".story .t4", {autoAlpha: 0, duration: 1, y:-50, ease: "sine.out", delay: 2})
+            tl.to(".story .t5", {autoAlpha: 1, duration: 1, y:0, ease: "sine.out"})
+            tl.to(".story .t5", {autoAlpha: 0, duration: 1, y:-50, ease: "sine.out", delay: 2})
+            tl.to(".story .t6", {autoAlpha: 1, duration: 1, y:0, ease: "sine.out"})
+            tl.to(".story .t6", {autoAlpha: 0, duration: 1, y:-50, ease: "sine.out", delay: 2})
+            tl.to("#canvas", {autoAlpha: 1, duration: 1})
+            tl.to(".title .p1", {autoAlpha: 1, y:0, duration: 0.8})
+            tl.to(".title .p2", {autoAlpha: 1, y:0, duration: 0.8})
+            tl.to(".title .p3", {autoAlpha: 1, y:0, duration: 0.8})
+            tl.to("#header", {top:0, duration: 0.4})
+        }, 2000)
+
+
+        const panel = document.querySelector("#section1");
+
+        ScrollTrigger.create({
+            trigger: panel,
+            start: "top top",
+            pin: true,
+            pinSpacing: false
+        });
+        
+    </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r120/three.min.js"></script>
     <script>
