--- a/안교남/index.html
+++ b/안교남/index.html
@@ -27,30 +27,33 @@
     <main id="main">
         <section id="section1">
             <div class="text">
-                <div class="t1">&lt;&lt;kyo</div>
-                <div class="t2">nam&gt;&gt;</div>
-                <div class="t3">&lt;code=</div>
-                <div class="t4">portfolio&gt;</div>
+                <div class="t1 split">&lt;&lt;kyo</div>
+                <div class="t2 split">nam&gt;&gt;</div>
+                <div class="t3 split">&lt;code=</div>
+                <div class="t4 split">portfolio&gt;</div>
             </div>
+            <canvas id="webgl-canvas"></canvas>
         </section>
         <!-- //section1 -->
 
         <section id="section2">
             <h2>&lt;code=<br>&nbsp;&nbsp;about&gt;</h2>
-            <div class="desc">
-                <div>leading technology,</div>
-                <div>dedicated</div>
-                <div>professionals,</div>
-                <div>and proven</div>
-                <div>expertise for</div>
-                <div>driving resu</div>
-                <div>lts scale yo,</div>
-                <div>ur model</div>
+            <div class="desc split">
+                leading technology,
+                dedicated
+                professionals,
+                and proven
+                expertise for
+                driving resu
+                lts scale yo,
+                ur model
             </div>
             <div class="img">
                 <img src="assets/img/section02.png" alt="나">
                 <div class="intro">
-                    창직종합설계프로젝트 과목을 이수하며 개발한 웹 서비스입니다. 프로젝트 설명 창직종합설계프로젝트 과목을 이수하며 개발한 웹 서비스입니다. 프로젝트 설명 창직종합설계프로젝트 과목을 이수하며 개발한 웹 서비스입니다. 프로젝트 설명 창직종합설계프로젝트 과목을 이수하며 개발한 웹 서비스입니다. 프로젝트 설명 창직종합설계프로젝트 과목을 이수하며 개발한 웹 서비스입니다.
+                    어떤 일이라도 노력하고 즐기면  그 결과는 빛을 바란다고 생각합니다. 
+                    신입의 열정과 도전정신을 깊숙히 새기며 배움에 있어 겸손함을 유지하며 
+                    세부적인 곳까지 파고드는 개발자가 되겠습니다.
                 </div>
             </div>
         </section>
@@ -61,5 +64,243 @@
         <section id="section5"></section>
         <section id="section6"></section>
     </main>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://unpkg.com/split-type"></script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js"></script>
+
+    <script>
+        const lenis = new Lenis()
+
+        lenis.on('scroll', (e) => {
+            console.log(e)
+        })
+
+        function raf(time) {
+            lenis.raf(time)
+            requestAnimationFrame(raf)
+        }
+
+        requestAnimationFrame(raf)
+
+        // 메인
+        const targets = gsap.utils.toArray(".split");
+
+        let SplitClient = new SplitType(targets, {type: "lines, words, chars"});
+
+        gsap.set("#webgl-canvas", {autoAlpha: 0})
+        gsap.set("#section1 .text .t1 .char", {autoAlpha: 0, y: 20})
+        gsap.set("#section1 .text .t2 .char", {autoAlpha: 0, y: 20})
+        gsap.set("#section1 .text .t3 .char", {autoAlpha: 0, y: 20})
+        gsap.set("#section1 .text .t4 .char", {autoAlpha: 0, y: 20})
+        gsap.set("#header", {autoAlpha: 0})
+        gsap.set("#section1", {autoAlpha: 0})
+
+        setTimeout(() => {
+            let tl = gsap.timeline();
+            tl.to("#section1", {duration: 4, autoAlpha: 1})
+            tl.to("#webgl-canvas", {duration: 2, autoAlpha: 1})
+            tl.to("#section1 .text .t1 .char", {autoAlpha: 1, y:0, stagger: 0.02})
+            tl.to("#section1 .text .t2 .char", {autoAlpha: 1, y:0, stagger: 0.02})
+            tl.to("#section1 .text .t3 .char", {autoAlpha: 1, y:0, stagger: 0.02})
+            tl.to("#section1 .text .t4 .char", {autoAlpha: 1, y:0, stagger: 0.02})
+            tl.to("#header", {autoAlpha: 1})
+        }, 2000);
+
+        // 섹션1
+        const panel = document.querySelector("#section1");
+
+        ScrollTrigger.create({
+            trigger: panel,
+            start: "top top",
+            pin: true,
+            pinSpacing: false
+        });
+
+        // 섹션2
+        gsap.from("#section2 .split .char", {
+            duration: 2,
+            autoAlpha: 0,
+            x: 500,
+            rotation: 360,
+            stagger: {
+                amount: 3,
+                from: "random"
+            },
+
+            scrollTrigger: {
+                trigger: "#section2",
+                start: "top 50%",
+                end: "bottom 20%",
+                markers: true
+            }
+        });
+
+
+
+        class Stage {
+            constructor() {
+                this.renderParam = {
+                    width: window.innerWidth,
+                    height: window.innerHeight
+                };
+
+                this.cameraParam = {
+                    fov: 70,
+                    lookAt: new THREE.Vector3(0, 0, 0)
+                };
+
+                this.fogParam = {
+                    color: 0x000000,
+                    start: 50,
+                    end: 2000
+                };
+
+                this.scene = null;
+                this.camera = null;
+                this.renderer = null;
+                this.geometry = null;
+                this.material = null;
+                this.mesh = null;
+                this.isInitialized = false;
+            }
+
+            init() {
+                this._setScene();
+                this._setRender();
+                this._setCamera();
+                this._setFog();
+
+                this.isInitialized = true;
+            }
+
+            _setScene() {
+                this.scene = new THREE.Scene();
+            }
+
+            _setRender() {
+                this.renderer = new THREE.WebGLRenderer({
+                    canvas: document.getElementById("webgl-canvas"),
+                    alpha: true
+                });
+                this.renderer.setPixelRatio(window.devicePixelRatio);
+                this.renderer.setSize(this.renderParam.width, this.renderParam.height);
+            }
+
+            _setCamera() {
+                const windowWidth = window.innerWidth;
+                const windowHeight = window.innerHeight;
+
+                if (!this.isInitialized) {
+                    this.camera = new THREE.PerspectiveCamera(
+                        this.cameraParam.fov,
+                        this.renderParam.width / this.renderParam.height
+                    );
+                    this.camera.lookAt(this.cameraParam.lookAt);
+                }
+
+                this.camera.aspect = windowWidth / windowHeight;
+                this.camera.updateProjectionMatrix();
+                this.renderer.setPixelRatio(window.devicePixelRatio);
+                this.renderer.setSize(windowWidth, windowHeight);
+            }
+
+            _setFog() {
+                this.scene.fog = new THREE.Fog(
+                    this.fogParam.fov,
+                    this.fogParam.start,
+                    this.fogParam.end
+                );
+            }
+
+            _render() {
+                let rot = 0;
+                const radian = (rot * Math.PI) / 180;
+
+                rot += 0.1;
+                this.camera.position.x = 1000 * Math.sin(radian);
+                this.camera.position.z = 1000 * Math.cos(radian);
+                this.renderer.render(this.scene, this.camera);
+            }
+
+            onResize() {
+                this._setCamera();
+            }
+
+            onRaf() {
+                this._render();
+            }
+        }
+
+        class Mesh {
+            constructor(stage) {
+                this.stage = stage;
+                this.mesh = null;
+            }
+
+            init() {
+                this._setMesh();
+            }
+
+            _setMesh() {
+                const vertices = [];
+                const SIZE = 3000;
+                const LENGTH = 3000;
+                const geometry = new THREE.BufferGeometry();
+                const material = new THREE.PointsMaterial({
+                    color: 0xffffff
+                });
+
+                for (let i = 0; i < LENGTH; i++) {
+                    const x = SIZE * (Math.random() - 0.5);
+                    const y = SIZE * (Math.random() - 0.5);
+                    const z = SIZE * (Math.random() - 0.5);
+
+                    vertices.push(x, y, z);
+                }
+
+                geometry.setAttribute(
+                    "position",
+                    new THREE.Float32BufferAttribute(vertices, 3)
+                );
+
+                this.mesh = new THREE.Points(geometry, material);
+                this.stage.scene.add(this.mesh);
+            }
+
+            _render() {
+                this.mesh.rotation.y += 0.001;
+            }
+
+            onRaf() {
+                this._render();
+            }
+        }
+
+        (() => {
+            const stage = new Stage();
+            const mesh = new Mesh(stage);
+
+            stage.init();
+            mesh.init();
+
+            window.addEventListener("resize", () => {
+                stage.onResize();
+            });
+
+            const _raf = () => {
+                window.requestAnimationFrame(() => {
+                    stage.onRaf();
+                    mesh.onRaf();
+
+                    _raf();
+                });
+            };
+
+            _raf();
+        })();
+    </script>
 </body>
 </html>
