--- a/진현미/index.html
+++ b/진현미/index.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -27,51 +29,7 @@
 
     <main id="main">
         <section id="section1" class="dot-bg">
-            <div class="heart">
-                <svg viewBox="0 0 200 200">
-                    <g transform="translate(100 100)">
-                        <g transform="translate(-50 -50)">
-                            <g>
-                                <path class="st0" d="M92.5,44.5L55,82c-2.7,2.7-7.2,2.7-9.9,0L13.9,50.9l-6.4-6.4C2.5,39.5,0,33,0,26.4c0-6.5,2.5-13.1,7.5-18.1
-                                    c1.2-1.2,2.5-2.3,3.9-3.2c9.9-6.6,23.5-5.5,32.2,3.2l6.4,6.4l6.4-6.4c5-5,11.5-7.5,18.1-7.5c6.5,0,13.1,2.5,18.1,7.5
-                                    C102.5,18.3,102.5,34.5,92.5,44.5z"/>
-                                <path class="st1" d="M92.5,44.5L62.1,74.9c-2.7,2.7-7.2,2.7-9.9,0L21,43.8l-6.4-6.4c-5-5-7.5-11.5-7.5-18.1
-                                    c0-4.9,1.4-9.9,4.3-14.1c9.9-6.6,23.5-5.5,32.2,3.2l6.4,6.4l6.4-6.4c5-5,11.5-7.5,18.1-7.5c6.5,0,13.1,2.5,18.1,7.5
-                                    C102.5,18.3,102.5,34.5,92.5,44.5z"/>
-                                <path class="st2" d="M50,14.8L50,14.8l-47.2,0C0.9,18.4,0,22.4,0,26.4c0,0.7,0,1.5,0.1,2.2h99.8c0.4-4.7-0.5-9.5-2.7-13.9L50,14.8
-                                    L50,14.8z"/>
-                                <path class="st3" d="M50,14.8L50,14.8l-42.5,0c-0.3,1.5-0.4,3-0.4,4.5c0,3.2,0.6,6.3,1.8,9.3h91c0.4-4.7-0.5-9.5-2.7-13.9L50,14.8
-                                    L50,14.8z"/>
-                                <path class="st4" d="M5.7,42.5h88.6c3.3-4.1,5.2-8.9,5.6-13.9H0.1C0.5,33.6,2.4,38.4,5.7,42.5z"/>
-                                <path class="st5" d="M99.9,28.6h-91c1.2,3.2,3.1,6.2,5.7,8.7l5.1,5.1h74.6C97.6,38.4,99.5,33.6,99.9,28.6z"/>
-                                <path class="st6" d="M5.7,42.5c0.6,0.7,1.2,1.4,1.8,2l6.4,6.4l5.5,5.5h61.3l11.9-11.9c0.6-0.6,1.2-1.3,1.8-2H5.7z"/>
-                                <path class="st7" d="M19.7,42.5l1.3,1.3l12.6,12.6h47l11.9-11.9c0.6-0.6,1.2-1.3,1.8-2H19.7z"/>
-                                <polygon class="st8" points="33.2,70.2 66.8,70.2 80.6,56.4 19.3,56.4 		"/>
-                                <polygon class="st9" points="80.6,56.4 33.6,56.4 47.5,70.2 66.8,70.2 		"/>
-                                <path class="st10" d="M66.8,70.2H33.2L45,82c2.7,2.7,7.2,2.7,9.9,0L66.8,70.2z"/>
-                                <path class="st11" d="M47.5,70.2l4.7,4.7c2.7,2.7,7.2,2.7,9.9,0l4.7-4.7H47.5z"/>
-                            </g>
-                            <path class="st12" d="M91.1,19.3c-2.1,2.9-7.7,2.4-12.5-1.2c-1.4-1-2.5-2.2-3.4-3.4c-2.2-3-2.9-6.2-1.3-8.2
-                                c2.1-2.9,7.7-2.3,12.5,1.2c2.8,2.1,4.6,4.7,5.3,7.1C92.2,16.5,92,18.1,91.1,19.3z"/>
-                            <path class="st13" d="M93.7,35.3c-2.2,0.3-4.5-2.4-5-6.1c0-0.2,0-0.4-0.1-0.5c-0.4-3.5,1-6.5,3.1-6.8c2.2-0.3,4.5,2.4,5,6.1
-                                c0,0.2,0.1,0.5,0.1,0.7C97.2,32,95.8,34.9,93.7,35.3z"/>
-                            <path class="st14" d="M78.7,18.1c-1.4-1-2.5-2.2-3.4-3.4h16.4c0.5,1.7,0.3,3.3-0.6,4.5C89,22.2,83.4,21.6,78.7,18.1z"/>
-                            <path class="st14" d="M96.9,28.6h-8.2c-0.4-3.5,1-6.5,3.1-6.8c2.2-0.3,4.5,2.4,5,6.1C96.8,28.2,96.8,28.4,96.9,28.6z"/>
-                        </g>
-                      <animateTransform 
-                          attributeName="transform" 
-                          type="scale" 
-                          values="1; 1.5; 1.25; 1.5; 1.5; 1;" 
-                          dur="1s" 
-                          repeatCount="indefinite"
-                          additive="sum">      
-                      </animateTransform>
-                  </g>
-                </svg>
-            </div>
-            <div class="img">
-                <img src="assets/img/bg.png" alt="나">
-            </div>
+            
             <div class="text-wrap">
                 <ul class="c-rainbow">
                     <li class="c-rainbow__layer c-rainbow__layer--white">PORTFOLIO</li>
@@ -84,18 +42,228 @@
                 </ul>
             </div>
             <canvas id="artboard"></canvas>
+            <canvas id="canvas"></canvas>
         </section>
         <!-- //section1 -->
-        <section id="section2"></section>
-        <section id="section3"></section>
+
+        <section id="section2">
+            <h2>01. 자기 소개</h2>
+            <div class="sec2-cont">
+                <h3>"웹을 스릴 넘치는 놀이터로 만드는 프론트엔드 열정가"</h3>
+                <div class="top">
+                    <h4>2023<br>포트폴리오</h4>
+                    <p>어떤 일이라도 노력하고 즐기면  그 결과는 빛을 바란다고 생각합니다. 신입의 열정과 도전정신을 깊숙히 새기며 배움에 있어 겸손함을 유지하며 세부적인 곳까지 파고드는 개발자가 되겠습니다.</p>
+                </div>
+                <div class="bottom">
+                    <p>어떤 일이라도 노력하고 즐기면  그 결과는 빛을 바란다고 생각합니다. 신입의 열정과 도전정신을 깊숙히 새기며 배움에 있어 겸손함을 유지하며 세부적인 곳까지 파고드는 개발자가 되겠습니다.</p>
+                    <a href="#">자기소개</a>
+                </div>
+                <div class="img">
+                    <img src="assets/img/bg.png" alt="나">
+                    <div class="heart">
+                        <svg viewBox="0 0 200 200">
+                            <g transform="translate(100 100)">
+                                <g transform="translate(-50 -50)">
+                                    <g>
+                                        <path class="st0" d="M92.5,44.5L55,82c-2.7,2.7-7.2,2.7-9.9,0L13.9,50.9l-6.4-6.4C2.5,39.5,0,33,0,26.4c0-6.5,2.5-13.1,7.5-18.1
+                                            c1.2-1.2,2.5-2.3,3.9-3.2c9.9-6.6,23.5-5.5,32.2,3.2l6.4,6.4l6.4-6.4c5-5,11.5-7.5,18.1-7.5c6.5,0,13.1,2.5,18.1,7.5
+                                            C102.5,18.3,102.5,34.5,92.5,44.5z"/>
+                                        <path class="st1" d="M92.5,44.5L62.1,74.9c-2.7,2.7-7.2,2.7-9.9,0L21,43.8l-6.4-6.4c-5-5-7.5-11.5-7.5-18.1
+                                            c0-4.9,1.4-9.9,4.3-14.1c9.9-6.6,23.5-5.5,32.2,3.2l6.4,6.4l6.4-6.4c5-5,11.5-7.5,18.1-7.5c6.5,0,13.1,2.5,18.1,7.5
+                                            C102.5,18.3,102.5,34.5,92.5,44.5z"/>
+                                        <path class="st2" d="M50,14.8L50,14.8l-47.2,0C0.9,18.4,0,22.4,0,26.4c0,0.7,0,1.5,0.1,2.2h99.8c0.4-4.7-0.5-9.5-2.7-13.9L50,14.8
+                                            L50,14.8z"/>
+                                        <path class="st3" d="M50,14.8L50,14.8l-42.5,0c-0.3,1.5-0.4,3-0.4,4.5c0,3.2,0.6,6.3,1.8,9.3h91c0.4-4.7-0.5-9.5-2.7-13.9L50,14.8
+                                            L50,14.8z"/>
+                                        <path class="st4" d="M5.7,42.5h88.6c3.3-4.1,5.2-8.9,5.6-13.9H0.1C0.5,33.6,2.4,38.4,5.7,42.5z"/>
+                                        <path class="st5" d="M99.9,28.6h-91c1.2,3.2,3.1,6.2,5.7,8.7l5.1,5.1h74.6C97.6,38.4,99.5,33.6,99.9,28.6z"/>
+                                        <path class="st6" d="M5.7,42.5c0.6,0.7,1.2,1.4,1.8,2l6.4,6.4l5.5,5.5h61.3l11.9-11.9c0.6-0.6,1.2-1.3,1.8-2H5.7z"/>
+                                        <path class="st7" d="M19.7,42.5l1.3,1.3l12.6,12.6h47l11.9-11.9c0.6-0.6,1.2-1.3,1.8-2H19.7z"/>
+                                        <polygon class="st8" points="33.2,70.2 66.8,70.2 80.6,56.4 19.3,56.4 		"/>
+                                        <polygon class="st9" points="80.6,56.4 33.6,56.4 47.5,70.2 66.8,70.2 		"/>
+                                        <path class="st10" d="M66.8,70.2H33.2L45,82c2.7,2.7,7.2,2.7,9.9,0L66.8,70.2z"/>
+                                        <path class="st11" d="M47.5,70.2l4.7,4.7c2.7,2.7,7.2,2.7,9.9,0l4.7-4.7H47.5z"/>
+                                    </g>
+                                    <path class="st12" d="M91.1,19.3c-2.1,2.9-7.7,2.4-12.5-1.2c-1.4-1-2.5-2.2-3.4-3.4c-2.2-3-2.9-6.2-1.3-8.2
+                                        c2.1-2.9,7.7-2.3,12.5,1.2c2.8,2.1,4.6,4.7,5.3,7.1C92.2,16.5,92,18.1,91.1,19.3z"/>
+                                    <path class="st13" d="M93.7,35.3c-2.2,0.3-4.5-2.4-5-6.1c0-0.2,0-0.4-0.1-0.5c-0.4-3.5,1-6.5,3.1-6.8c2.2-0.3,4.5,2.4,5,6.1
+                                        c0,0.2,0.1,0.5,0.1,0.7C97.2,32,95.8,34.9,93.7,35.3z"/>
+                                    <path class="st14" d="M78.7,18.1c-1.4-1-2.5-2.2-3.4-3.4h16.4c0.5,1.7,0.3,3.3-0.6,4.5C89,22.2,83.4,21.6,78.7,18.1z"/>
+                                    <path class="st14" d="M96.9,28.6h-8.2c-0.4-3.5,1-6.5,3.1-6.8c2.2-0.3,4.5,2.4,5,6.1C96.8,28.2,96.8,28.4,96.9,28.6z"/>
+                                </g>
+                            <animateTransform 
+                                attributeName="transform" 
+                                type="scale" 
+                                values="1; 1.5; 1.25; 1.5; 1.5; 1;" 
+                                dur="1s" 
+                                repeatCount="indefinite"
+                                additive="sum">      
+                            </animateTransform>
+                        </g>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- //section2 -->
+
+
+        <section id="section3">
+            <h2>02. 코딩 자랑</h2>
+            <div class="sec3-cont"></div>
+        </section>
+        <!-- //section2 -->
+
         <section id="section4"></section>
         <section id="section5"></section>
         <section id="section6"></section>
     </main>
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
     <script src="https://supahfunk.github.io/supah-codepen/OrbitControls.110.js"></script>
+    <script>
+        gsap.set(".text-wrap ul li", {autoAlpha: 0});
+        gsap.set("#artboard", {autoAlpha: 0, scale: 0.7});
+        gsap.set("#canvas", {autoAlpha: 0});
+
+        setTimeout(() => {
+            gsap.to("#canvas", {autoAlpha: 1})
+            gsap.to("#artboard", {autoAlpha: 1, scale: 1, duration: 2, delay: 1})
+            gsap.to(".text-wrap ul li", {autoAlpha: 1, scale: 1, duration: 2, delay: 2, stagger: 0.1})
+        }, 2000);
+
+        const panel = document.querySelector("#section1");
+
+        ScrollTrigger.create({
+            trigger: panel,
+            start: "top top",
+            markers: true,
+            pin: true,
+            pinSpacing: false
+        });
+        const panel2 = document.querySelector("#section2");
+
+        ScrollTrigger.create({
+            trigger: panel2,
+            start: "top top",
+            pin: true,
+            pinSpacing: false
+        });
+
+
+    </script>
+    <script>
+        //2차원 벡터
+        class Vector {
+            constructor(x, y) {
+                this.x = x;
+                this.y = y;
+            }
+            set(x, y) {
+                this.x = x;
+                this.y = y;
+                return this;
+            }
+            clone() {
+                return new Vector(this.x, this.y);
+            }
+            add(v) {
+                this.x += v.x;
+                this.y += v.y;
+                return this;
+            }
+            sub(v) {
+                this.x -= v.x;
+                this.y -= v.y;
+                return this;
+            }
+            setFromAngle(angle) {
+                this.x = Math.cos(angle);
+                this.y = Math.sin(angle);
+            }
+            addFromScalar(x, y) {
+                this.x += x;
+                this.y += y;
+            }
+        }
+
+        window.onload = function () {
+            var canvas = document.getElementById("canvas"),
+                ctx = canvas.getContext("2d"),
+                width = (canvas.width = window.innerWidth),
+                height = (canvas.height = window.innerHeight),
+                particles = [],
+                particleNum = 80,
+                colors = ["#eeb900", "#6DD0A5", "#f799db"];
+
+            function randomIntFromRange(min, max) {
+                return Math.floor(Math.random() * (max - min + 1) + min);
+            }
+            function randomColor(colors) {
+                return colors[Math.floor(Math.random() * colors.length)];
+            }
+            class Particle {
+                constructor(x, y, speed, direction, radius, color) {
+                    this.position = new Vector(x, y);
+                    this.velocity = new Vector(1, 1);
+                    this.velocity.setFromAngle(direction);
+                    this.speed = speed;
+                    this.radius = radius;
+                    this.color = color;
+                }
+                update() {
+                    this.position.addFromScalar(
+                        this.velocity.x * this.speed,
+                        this.velocity.y * this.speed
+                    );
+                    if (
+                        this.position.x + this.radius > canvas.width ||
+                        this.position.x - this.radius < 0
+                    ) {
+                        this.velocity.x *= -1;
+                    }
+                    if (
+                        this.position.y + this.radius > canvas.height ||
+                        this.position.y - this.radius < 0
+                    ) {
+                        this.velocity.y *= -1;
+                    }
+                }
+            }
+
+            for (let i = 0; i < particleNum; i++) {
+                particles.push(
+                    new Particle(
+                        canvas.width / 2,
+                        canvas.height / 2,
+                        Math.random() + 1,
+                        Math.random() * Math.PI * 2,
+                        randomIntFromRange(2, 24),
+                        randomColor(colors)
+                    )
+                );
+            }
+
+            render();
+
+            function render() {
+                ctx.clearRect(0, 0, width, height);
+                for (let i = 0; i < particleNum; i++) {
+                    var p = particles[i];
+                    p.update();
+                    ctx.beginPath();
+                    ctx.arc(p.position.x, p.position.y, p.radius, 0, Math.PI * 2, false);
+                    ctx.fillStyle = p.color;
+                    ctx.fill();
+                }
+                requestAnimationFrame(render);
+            }
+        };
+    </script>
+    
     <script>
         var pi = Math.PI;
 
