--- a/김현빈/index.html
+++ b/김현빈/index.html
@@ -18,16 +18,38 @@
 
     <main id="parallax__cont">
         <section id="section1" class="parallax__item">
-            <div class="img"></div>
+            <div class="img">
+                <img src="https://images.unsplash.com/photo-1687208833983-ab2ac071fa41?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" alt="메인 이미지" />
+            </div>
             <div class="circle">portfolio</div>
             <div class="desc">
                 <p>어떤 일이라도 노력하고 즐기면  그 결과는 빛을 바란다고 생각합니다. 신입의 열정과 도전정신을 깊숙히 새기며 배움에 있어 겸손함을 유지하며 세부적인 곳까지 파고드는 개발자가 되겠습니다.</p>
                 <span>2022.03.04<br>김현빈</span>
             </div>
             <div class="text-wrap">
-                <div>I am</div>
-                <div>frontend</div>
-                <div>DEVELOPER</div>
+                <div class="t1">I am</div>
+                <div class="t2">frontend</div>
+                <div class="t3">DEVELOPER</div>
+            </div>
+            <div class="about">
+                <img src="https://images.unsplash.com/photo-1488161628813-04466f872be2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=764&q=80" alt="메인 이미지" />
+            </div>
+            <div class="about-text">
+안녕하세요. 프론트엔드를 꿈꾸는 김은수입니다.
+저의 포트폴리오에 오신 것을 환영합니다. 디자인에 관심이 
+생겨 웹반응형UI/UX 웹 퍼블리셔과정을 배우게 되었는데 웹페이지에서
+동적인 것을 구현할 수 있는 프론트엔드 개발에 점차 흥미를 느끼게 됐습니다. 
+<em>새로운 기술들이 끊임없이 나오는 프론트엔드에서 최신 트렌드에 뒤쳐지지</em>
+않기 위해 검색을 통해 동향을 파악하고 각각의 기술들의 장단점을 확실하게 
+알고 원하는 기능이필요할 때 바로 배우고 적용할 수 있는 개발자가 되겠습니다. 
+공들여 만든 프로젝트와 제 노력의 결과물을 보실 수 있습니다. 
+편안하게 보시며 즐겨주세요. 감사합니다.
+                <div class="add1">
+                    We are composed of a curated selection of distinct furniture and accessories for home and garden, carefully chosen for their beauty, quality and versatility, and tailored to reflect Canada’s singular sense of style.
+                </div>
+                <div class="add2">
+                    We are a collective that celebrates individuality. A hub where people with a shared passion for tasteful living can be inspired and fulfilled. A full-service space where you can browse with confidence, cultivate your self-expression and even taste new Italian flavours.
+                </div>
             </div>
         </section>
         <!-- //section1 -->
@@ -87,29 +109,80 @@
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js"></script>
 
     <script>
+        // 스무스 효과
         const lenis = new Lenis();
-
         function raf(time) {
             lenis.raf(time)
             requestAnimationFrame(raf);
         }
-
         requestAnimationFrame(raf);
 
-        let sections = gsap.utils.toArray(".parallax__item");
+        // 메인 애니메이션 
+        gsap.set ("#section1 .circle", {autoAlpha: 0, x: -100, rotation: -180})
+        gsap.set ("#section1 .desc p", {autoAlpha: 0, y: 30})
+        gsap.set ("#section1 .desc span", {autoAlpha: 0, y: 20})
+        gsap.set (".text-wrap .t1", {autoAlpha: 0, y: 30})
+        gsap.set (".text-wrap .t2", {autoAlpha: 0, y: 30})
+        gsap.set (".text-wrap .t3", {autoAlpha: 0, y: 30})
 
-        gsap.to(sections, {
+        setTimeout(() => {
+            let tl = gsap.timeline();
+            tl.set  ("#section1 .img", {autoAlpha: 1})
+            tl.from ("#section1 .img", {duration: 1.5, xPercent: -100, ease: "Power2.out"})
+            tl.from ("#section1 .img img", {duration: 1.5, xPercent: 100, scale: 1.3, delay: -1.5, ease: Power2.out})
+            tl.to ("#section1 .circle", {duration: 1, autoAlpha: 1, rotation: 0, x: 0, ease: Power2.out}, "-=0.5")
+            tl.to ("#section1 .desc p", {duration: 0.7, autoAlpha: 1, y: 0, ease: Power1.out})
+            tl.to ("#section1 .desc span", {duration: 0.6, autoAlpha: 1, y: 0, ease: Power1.out})
+            tl.to (".text-wrap .t1", {duration: 0.6, autoAlpha: 1, y:0, ease: Power1.out})
+            tl.to (".text-wrap .t2", {duration: 0.6, autoAlpha: 1, y:0, ease: Power1.out})
+            tl.to (".text-wrap .t3", {duration: 0.6, autoAlpha: 1, y:0, ease: Power1.out})
+        }, 2000);
+
+
+        // 가로 모드
+        let sections = gsap.utils.toArray(".parallax__item");
+        let scrollTween = gsap.to(sections, {
             x: -(document.querySelector("#parallax__cont").offsetWidth - window.innerWidth),
             ease: "none",
             scrollTrigger: {
                 trigger: "#parallax__cont",
                 pin: true,
+                anticipatePin: 1,
                 scrub: 1,
-                
                 end: "+=7000",
-                // end: document.querySelector("#parallax__cont").offsetWidth,
             }
         });
+
+        // 섹션1
+        gsap.to(".text-wrap .t2", {
+            duration: 1,
+            x: -900,
+            scrollTrigger: {
+                trigger: ".text-wrap",
+                containerAnimation: scrollTween,
+                start: "left right",
+                end: "right left",
+                scrub: 0.5,
+                markers: false,
+            },
+        });
+
+        gsap.to(".text-wrap .t3", {
+            duration: 1,
+            x: -300,
+            scrollTrigger: {
+                trigger: ".text-wrap",
+                containerAnimation: scrollTween,
+                start: "left right",
+                end: "right left",
+                scrub: 1,
+                markers: false,
+            },
+        });
+
+        // window.addEventListener('resize', function() {
+        //     location.reload();
+        // });
     </script>
 </body>
 </html>
