--- a/권현정/index.html
+++ b/권현정/index.html
@@ -32,20 +32,102 @@
                     </ul>
                 </div>
             </div>
-            <div class="right"></div>
+            <div class="right">
+                <img src="assets/img/section01.jpg" alt="">
+            </div>
             <div class="title">
-                <div class="t1">CREATIVE</div>
-                <div class="t2">UNIQUE</div>
+                <div class="t1 split">CREATIVE</div>
+                <div class="t2 split">UNIQUE</div>
             </div>
         </section>
         <!-- //section1 -->
 
-        <section id="section2"></section><!-- //section2 -->
-        <section id="section3"></section><!-- //section3 -->
+        <section id="section2">
+            <div class="sec2-title">
+                <span class="left">1.</span>
+                <div class="right">
+                    <h2>about me</h2>
+                    <p>안녕하세요. 프론트엔드를 꿈꾸는 김은수입니다.
+저의 포트폴리오에 오신 것을 환영합니다. 디자인에 관심이 
+생겨 웹반응형UI/UX 웹 퍼블리셔과정을 배우게 되었는데 웹페이지에서
+동적인 것을 구현할 수 있는 느끼게 됐습니다. 
+                    </p>
+                </div>
+            </div>
+            <div class="sec2-desc">
+                <div class="left"></div>
+                <div class="right">
+                    언제나 성장하기 위해 노력하고 끊임없이 움직이는 사람, 신입 개발자 이요셉입니다!
+                
+                    저는 중국의 산동대학교에서 경영학을 전공하며 다양한 경험을 쌓았습니다. 
+                    이제는 나의 적성에 맞는 일을 찾고자 노력하고 있습니다. 
+                    초기에는 개발에 대해 익숙하지 않아 서툴고 부족하다는 것을 알고 있습니다. 
+                    하지만 이러한 부분을 열정적으로 극복하고자 합니다!
+
+                    저는 항상 새로운 도전을 통해 스스로를 발전시키고자 하는 열정을 가지고 있습니다. 
+                    어려운 문제에 직면하더라도 결코 굴하지 않고, 적극적인 태도로 학습하고 성장하는 것을 목표로 삼고 있습니다. 
+                    제한된 경험과 지식을 극복하며, 능동적으로 새로운 기술과 개념을 습득하고 적용해 나갈 준비가 되어 있습니다.
+
+                    실력과 노력은 점점 상승한다고 믿습니다. 저는 끊임없이 발전하고자 하는 열정과 인내심을 가지고 있으며, 
+                    어떤 일이든 최선을 다해 성취하기 위해 노력할 것입니다. 제가 부족한 부분을 채우기 위해 노력하고, 
+                    함께 일하는 동료들과의 협업을 통해 더 큰 성과를 이뤄낼 자신이 있습니다.
+
+                    저는 열정적이고 성장을 추구하는 신입 개발자로서, 
+                    새로운 도전을 감히 받아들이며 빠르게 적응하고 성장할 준비가 되어 있습니다. 
+                    저에게 주어진 기회를 최대한 활용하여 조직에 가치를 더하고, 
+                    함께 성장하는 모습을 보여드리겠습니다!
+                </div>
+            </div>
+        </section>
+        <!-- //section2 -->
+
+        <section id="section3">
+            <div class="title-wrap">
+                <div class="sec3-title1">2.</div>
+                <div class="sec3-title2">webstandard site</div>
+                <div class="sec3-title3">react.js site</div>
+                <div class="sec3-title4">vue.js site</div>
+                <div class="sec3-title5">next.js site</div>
+            </div>
+            <div class="site-wrap">
+                <div class="site1">1</div>
+                <!-- <div class="site1">2</div>
+                <div class="site1">3</div>
+                <div class="site1">4</div> -->
+            </div>
+        </section>
+        <!-- //section3 -->
         <section id="section4"></section><!-- //section4 -->
         <section id="section5"></section><!-- //section5 -->
         <section id="section6"></section><!-- //section6 -->
     </main>
     <!-- //contents -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
+    <script src="https://unpkg.com/split-type"></script>
+    <script>
+        const targets = gsap.utils.toArray(".split");
+        let SplitClient = new SplitType(targets, {type: "lines, words, chars"});
+
+        gsap.set("#section1 .title .t1 .char", {autoAlpha: 0, x: -60})
+        gsap.set("#section1 .title .t2 .char", {autoAlpha: 0, x: -60})
+        gsap.set("#header", {top: -200})
+        gsap.set("#section1 .left .text", {autoAlpha: 0})
+        gsap.set("#section1 .left", {autoAlpha: 1, width: "50%"})
+
+        setTimeout(() => {
+            let tl = gsap.timeline();
+            tl.set("#section1 .right", { autoAlpha: 1 });
+            tl.from("#section1 .right", 1.5, {xPercent: -100, ease: Power2.out});
+            tl.from("#section1 .right img", 1.5, {xPercent: 100, scale: 1.3, delay: -1.5, ease: Power3.out});
+            tl.to("#section1 .title .t1 .char", {duration: 0.9, autoAlpha: 1, x: 0, stagger: 0.04, ease: "slow.out"}, "-=0.5")
+            tl.to("#section1 .title .t2 .char", {duration: 0.9, autoAlpha: 1, x: 0, stagger: 0.04, ease: "slow.out"}, "-=0.5")
+            tl.to("#header", {top: 0})
+            tl.to("#section1 .left .text", {autoAlpha: 1})
+
+
+        }, 2000)
+    </script>
 </body>
 </html>
