--- a/김도현/index.html
+++ b/김도현/index.html
@@ -13,7 +13,7 @@
 <body>
     <header id="header">
         <div class="title">
-            <h1>DO - portfolio : Frontend</h1>
+            <h1>DO : Portfolio</h1>
             <span>Developoer and Desgin</span> 
         </div>
         <nav class="nav">
@@ -30,15 +30,20 @@
     <main id="main">
         <section id="section1">
             <div class="title">
-                <div class="t1">creative</div>
-                <div class="t2">PORTFOLIO</div>
-                <p class="t3"><span>Hi, My name is DO HYUN</span></p>
+                <div class="t1 split">creative</div>
+                <div class="t2 split">PORTFOLIO</div>
+                <p class="t3 split">Hi, My name is DO HYUN</p>
             </div>
-            <canvas id="canvar"></canvas>
+            <canvas id="canvas"></canvas>
+            <div class="bg"></div>
         </section>
         <!-- //section1 -->
 
-        <section id="section2"></section>
+        <section id="section2">
+
+        </section>
+        <!-- //section2 -->
+
         <section id="section3"></section>
         <section id="section4"></section>
         <section id="section5"></section>
@@ -46,7 +51,58 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
+    <script src="https://unpkg.com/split-type"></script>
     <script>
+        const targets = gsap.utils.toArray(".split");
+        let SplitClient = new SplitType(targets, {type: "lines, words, chars"});
+        let lines = SplitClient.lines;
+        let words = SplitClient.words;
+        let chars = SplitClient.chars;
+
+        gsap.set("#section1 .title .t1 .char", {autoAlpha: 0, y: 140})
+        gsap.set("#section1 .title .t2 .char", {autoAlpha: 0, y: 140})
+        gsap.set("#canvas", {autoAlpha: 0})
+        gsap.set("#header", {top: -100})
+        gsap.set("#section1 .title .t3", {width: 0, autoAlpha: 0, overflow: "hidden"})
+        gsap.set("#section1 .title .t3 .char", {autoAlpha: 0, y: 100})
+        
+        setTimeout(() => {
+            let tl = gsap.timeline();
+            tl.to("#section1 .title .t3", {width: "58vw", autoAlpha: 1, ease: "circ.out"})
+              .to("#section1 .title .t3 .char", {duration: 0.8, autoAlpha: 1, y:0, ease: "back(4).out", stagger: {amount: 0.5, from : "center"}})
+              .to("#section1 .title .t3", {duration: 0.8, scale: 0.5, delay: 1, x: 490, y: 250})
+              .to("#section1 .title .t1 .char", {autoAlpha: 1, y:0, ease: "circ.out", stagger: {amount: .31, from: "left"}}, "a")
+              .to("#section1 .title .t2 .char", {autoAlpha: 1, y:0, ease: "circ.out", stagger: {amount: .31, from: "right"}}, "a")
+              .to("#canvas", {duration: 1, autoAlpha: 1})
+              .to("#header", {top: 0})
+        }, 2000);
+
+
+        const panel = document.querySelector("#section1");
+
+        ScrollTrigger.create({
+            trigger: panel,
+            start: "top top",
+            pin: true,
+            pinSpacing: false
+        });
+
+        const ani1 = gsap.timeline();
+        ani1.to("#section1 .bg", {height: "100vh"})
+
+        ScrollTrigger.create({
+            animation: ani1,
+            trigger: "#section1 .bg",
+            start: "top 50%",
+            scrub: true,
+            markers: true
+        });
+
+
+
+        // 메인 three.js    
         const canvas = document.querySelector('canvas');
 
         var mousePos = {
