--- a/이유나/index.html
+++ b/이유나/index.html
@@ -84,8 +84,18 @@
         </section>
         <!-- //section3 -->
 
-        <section id="section4"></section>
-        <section id="section5"></section>
+        <section id="section4">
+            section4
+        </section>
+        <!-- //section3 -->
+
+        <section id="section5">
+            <div class="sec5-box1">sec5-box1</div>
+            <div class="sec5-box2">sec5-box2</div>
+            <div class="sec5-box3">sec5-box3</div>
+            <div class="sec5-box4">sec5-box4</div>
+        </section>
+        <!-- //section3 -->
         <section id="section6"></section>
     </main>
 
@@ -256,6 +266,51 @@
             pin: true,
             markers: true,
             anticipatePin: 1
+        });
+
+
+        const panel1 = document.querySelector("#section5 .sec5-box1");
+
+        ScrollTrigger.create({
+            trigger: panel1,
+            start: "top top",
+            end: "+=1000",
+            markers: true,
+            pin: true,
+            pinSpacing: false
+        });
+
+        const panel2 = document.querySelector("#section5 .sec5-box2");
+
+        ScrollTrigger.create({
+            trigger: panel2,
+            start: "top top",
+            end: "+=1000",
+            markers: true,
+            pin: true,
+            pinSpacing: false
+        });
+
+        const panel3 = document.querySelector("#section5 .sec5-box3");
+
+        ScrollTrigger.create({
+            trigger: panel3,
+            start: "top top",
+            end: "+=1000",
+            markers: true,
+            pin: true,
+            pinSpacing: false
+        });
+
+        const panel4 = document.querySelector("#section5 .sec5-box4");
+
+        ScrollTrigger.create({
+            trigger: panel4,
+            start: "top top",
+            end: "+=1000",
+            markers: true,
+            pin: true,
+            pinSpacing: false
         });
     </script>
 </body>
